Rename overview to Abstract and clear content

--- a/index.html
+++ b/index.html
@@ -175,18 +175,18 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup> University of Illinois Urbana-Champaign</span><br>
-              <span class="author-block">2025</span>
+              <span class="author-block"> December, 2025</span>
             </div>
 
             <div class="column has-text-centered">
-              <div class="publication-links">
-                <span class="link-block">
-                  <a href="#frontend-demo"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="fas fa-video"></i>
-                  </span>
-                  <span>Demo</span>
+            <div class="publication-links">
+              <span class="link-block">
+                <a href="#webapp-demo"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon">
+                  <i class="fas fa-video"></i>
+                </span>
+                <span>Demo</span>
                 </a>
               </span>
 
@@ -218,8 +218,22 @@
 </section>
 
 
+<!-- Abstract -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified"></div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End paper abstract -->
+
+
 <!-- Demo video -->
-<section class="hero teaser" id="frontend-demo">
+<section class="hero teaser" id="webapp-demo">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video poster="static/images/demo-poster.png" autoplay controls muted loop height="100%" preload="metadata">
@@ -229,7 +243,6 @@
   </div>
 </section>
 <!-- End demo video -->
-
 
 <!-- Overview -->
 <section class="section hero is-light">
@@ -272,7 +285,7 @@
     </div>
   </div>
 </section>
-<!-- End paper abstract -->
+<!-- End paper overview -->
 
 
 <!-- Image carousel -->
