--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
 
 <!-- Abstract -->
 <section class="section hero is-light">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-10">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
