Update Results button in hero

--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
               </span>
 
             <span class="link-block">
-              <a href="#presentation"
+              <a href="#results"
               class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
-                <i class="fas fa-file-powerpoint"></i>
+                <i class="fas fa-chart-bar"></i>
               </span>
-              <span>Presentation</span>
+              <span>Results</span>
             </a>
           </span>
 
