Restore demo anchor id

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
 
 <!-- Demo video (embedded) -->
-<section class="hero is-small is-light">
+<section class="hero is-small is-light" id="webapp-demo">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3 has-text-centered">Demo</h2>
