Fix page repositioning on load and repositions results

--- a/index.html
+++ b/index.html
@@ -326,6 +326,46 @@
             <div class="bar-rows" id="baseline-chart-rows"></div>
           </div>
 
+          <h3>Validation vs OOD Test</h3>
+          <div class="table-container">
+            <table class="table is-fullwidth results-table">
+              <thead>
+                <tr>
+                  <th>Split</th>
+                  <th>Accuracy</th>
+                  <th>Macro F1</th>
+                  <th>Epoch</th>
+                  <th>Loss</th>
+                  <th>Throughput</th>
+                  <th>Samples</th>
+                  <th>Classes</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Best Validation</td>
+                  <td id="val-acc">0.00</td>
+                  <td id="val-f1">0.00</td>
+                  <td id="val-epoch">0</td>
+                  <td id="val-loss">-</td>
+                  <td id="val-throughput">-</td>
+                  <td id="val-samples">-</td>
+                  <td id="val-classes">-</td>
+                </tr>
+                <tr>
+                  <td>Final Test</td>
+                  <td id="test-acc">0.00</td>
+                  <td id="test-f1">0.00</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
           <h3>Headline metrics</h3>
           <div class="columns is-multiline results-cards">
             <div class="column is-one-third">
@@ -379,48 +419,6 @@
                 </div>
               </div>
             </div>
-          </div>
-
-
-
-          <h3>Validation vs Test</h3>
-          <div class="table-container">
-            <table class="table is-fullwidth results-table">
-              <thead>
-                <tr>
-                  <th>Split</th>
-                  <th>Accuracy</th>
-                  <th>Macro F1</th>
-                  <th>Epoch</th>
-                  <th>Loss</th>
-                  <th>Throughput</th>
-                  <th>Samples</th>
-                  <th>Classes</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Best Validation</td>
-                  <td id="val-acc">0.00</td>
-                  <td id="val-f1">0.00</td>
-                  <td id="val-epoch">0</td>
-                  <td id="val-loss">-</td>
-                  <td id="val-throughput">-</td>
-                  <td id="val-samples">-</td>
-                  <td id="val-classes">-</td>
-                </tr>
-                <tr>
-                  <td>Final Test</td>
-                  <td id="test-acc">0.00</td>
-                  <td id="test-f1">0.00</td>
-                  <td>-</td>
-                  <td>-</td>
-                  <td>-</td>
-                  <td>-</td>
-                  <td>-</td>
-                </tr>
-              </tbody>
-            </table>
           </div>
 
           <h3>Confusion matrix</h3>
