restructuring the results section

--- a/index.html
+++ b/index.html
@@ -326,6 +326,24 @@
             <div class="bar-rows" id="baseline-chart-rows"></div>
           </div>
 
+          <h3>Detailed Analysis</h3>
+          <div class="columns is-variable is-5">
+            <div class="column is-half">
+              <div class="card" style="min-height: 340px;">
+                <div class="card-content">
+                  <p class="title is-5">Validation Pass</p>
+                </div>
+              </div>
+            </div>
+            <div class="column is-half">
+              <div class="card" style="min-height: 340px;">
+                <div class="card-content">
+                  <p class="title is-5">Testing Pass</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <h3>Validation vs OOD Test</h3>
           <div class="table-container">
             <table class="table is-fullwidth results-table">
