trying new scaling

--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
           </div>
 
           <h3>Detailed Analysis</h3>
-          <div class="columns is-variable is-5">
-            <div class="column is-half">
+          <div class="columns is-variable is-5 is-desktop">
+            <div class="column is-7">
               <div class="card analysis-box">
                 <div class="card-content">
                   <p class="title is-5">Validation Pass</p>
@@ -375,7 +375,7 @@
                 </div>
               </div>
             </div>
-            <div class="column is-half">
+            <div class="column is-5">
               <div class="card analysis-box">
                 <div class="card-content">
                   <p class="title is-5">Testing Pass</p>
