--- a/index.html
+++ b/index.html
@@ -327,11 +327,58 @@
           </div>
 
           <h3>Detailed Analysis</h3>
-          <div class="columns is-variable is-5 is-desktop">
-            <div class="column is-7">
+          <div class="columns is-variable is-5">
+            <div class="column is-half">
               <div class="card analysis-box">
                 <div class="card-content">
                   <p class="title is-5">Validation Pass</p>
+                  <div class="metrics-grid">
+                    <div class="metric-card metric-chip">
+                      <p class="metric-chip-value" id="metric-validate-top1">0.00</p>
+                      <p class="metric-chip-label">Top-1 Accuracy</p>
+                    </div>
+                    <div class="metric-card metric-chip">
+                      <p class="metric-chip-value" id="metric-validate-top5">0.00</p>
+                      <p class="metric-chip-label">Top-5 Accuracy</p>
+                    </div>
+                    <div class="metric-card metric-chip">
+                      <p class="metric-chip-value" id="macro-validate-f1">0.00</p>
+                      <p class="metric-chip-label">Macro F1 Score</p>
+                    </div>
+                    <div class="metric-card metric-chip">
+                      <p class="metric-chip-value" id="micro-validate-f1">0.00</p>
+                      <p class="metric-chip-label">Micro F1 Score</p>
+                    </div>
+                    <div class="metric-card metric-chip">
+                      <p class="metric-chip-value" id="metric-validate-throughput">0.00</p>
+                      <p class="metric-chip-label">Throughput (img/s)</p>
+                    </div>
+                    <div class="metric-card metric-chip">
+                      <p class="metric-chip-value" id="metric-validate-samples">0/0</p>
+                      <p class="metric-chip-label">Samples (correct/total)</p>
+                    </div>
+                  </div>
+                  <div class="analysis-graphs">
+                    <h4 class="is-size-6">Confusion matrix</h4>
+                    <div class="results-canvas-wrap">
+                      <canvas id="confusion-canvas" class="results-canvas results-canvas--square" aria-label="Confusion matrix"></canvas>
+                      <div class="canvas-tooltip" id="confusion-tooltip"></div>
+                    </div>
+
+                    <h4 class="is-size-6">Calibration</h4>
+                    <div class="results-canvas-wrap">
+                      <canvas id="calibration-canvas" class="results-canvas results-canvas--wide" aria-label="Calibration curve"></canvas>
+                      <div class="canvas-tooltip" id="calibration-tooltip"></div>
+                    </div>
+                    <p class="chart-caption">Red = accuracy, Blue = perfect calibration.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="column is-half">
+              <div class="card analysis-box">
+                <div class="card-content">
+                  <p class="title is-5">Testing Pass</p>
                   <div class="metrics-grid">
                     <div class="metric-card metric-chip">
                       <p class="metric-chip-value" id="metric-test-top1">0.00</p>
@@ -354,31 +401,24 @@
                       <p class="metric-chip-label">Throughput (img/s)</p>
                     </div>
                     <div class="metric-card metric-chip">
-                      <p class="metric-chip-value" id="metric-test-samples">0.00</p>
+                      <p class="metric-chip-value" id="metric-test-samples">0/0</p>
                       <p class="metric-chip-label">Samples (correct/total)</p>
                     </div>
                   </div>
                   <div class="analysis-graphs">
                     <h4 class="is-size-6">Confusion matrix</h4>
                     <div class="results-canvas-wrap">
-                      <canvas id="confusion-canvas" class="results-canvas results-canvas--square" aria-label="Confusion matrix"></canvas>
-                      <div class="canvas-tooltip" id="confusion-tooltip"></div>
+                      <canvas id="confusion-test-canvas" class="results-canvas results-canvas--square" aria-label="Confusion matrix (test)"></canvas>
+                      <div class="canvas-tooltip" id="confusion-test-tooltip"></div>
                     </div>
 
                     <h4 class="is-size-6">Calibration</h4>
                     <div class="results-canvas-wrap">
-                      <canvas id="calibration-canvas" class="results-canvas results-canvas--wide" aria-label="Calibration curve"></canvas>
-                      <div class="canvas-tooltip" id="calibration-tooltip"></div>
+                      <canvas id="calibration-test-canvas" class="results-canvas results-canvas--wide" aria-label="Calibration curve (test)"></canvas>
+                      <div class="canvas-tooltip" id="calibration-test-tooltip"></div>
                     </div>
                     <p class="chart-caption">Red = accuracy, Blue = perfect calibration.</p>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="column is-5">
-              <div class="card analysis-box">
-                <div class="card-content">
-                  <p class="title is-5">Testing Pass</p>
                 </div>
               </div>
             </div>
