reworked the "Ece" badge

--- a/index.html
+++ b/index.html
@@ -365,12 +365,12 @@
                       <div class="canvas-tooltip" id="confusion-tooltip"></div>
                     </div>
 
-                    <div class="metric-card metric-chip metric-chip-inline">
-                      <p class="metric-chip-label">ECE</p>
-                      <p class="metric-chip-value" id="metric-validate-ece">0.000</p>
-                    </div>
                     <h4 class="is-size-6">Calibration curve</h4>
                     <div class="results-canvas-wrap">
+                      <div class="metric-card metric-chip ece-chip">
+                        <p class="metric-chip-label">ECE</p>
+                        <p class="metric-chip-value" id="metric-validate-ece">0.000</p>
+                      </div>
                       <canvas id="calibration-canvas" class="results-canvas results-canvas--wide" aria-label="Calibration curve"></canvas>
                       <div class="canvas-tooltip" id="calibration-tooltip"></div>
                     </div>
@@ -416,12 +416,12 @@
                       <div class="canvas-tooltip" id="confusion-test-tooltip"></div>
                     </div>
 
-                    <div class="metric-card metric-chip metric-chip-inline">
-                      <p class="metric-chip-label">ECE</p>
-                      <p class="metric-chip-value" id="metric-test-ece">0.000</p>
-                    </div>
                     <h4 class="is-size-6">Calibration curve</h4>
                     <div class="results-canvas-wrap">
+                      <div class="metric-card metric-chip ece-chip">
+                        <p class="metric-chip-label">ECE</p>
+                        <p class="metric-chip-value" id="metric-test-ece">0.000</p>
+                      </div>
                       <canvas id="calibration-test-canvas" class="results-canvas results-canvas--wide" aria-label="Calibration curve (test)"></canvas>
                       <div class="canvas-tooltip" id="calibration-test-tooltip"></div>
                     </div>
