chnaged form chip to an actual button

--- a/index.html
+++ b/index.html
@@ -328,9 +328,11 @@
 
           <div class="section-heading-inline">
             <h3>Detailed Analysis</h3>
-            <a class="dataset-chip" href="https://huggingface.co/datasets/Marxulia/asl_sign_languages_alphabets_v03" target="_blank" rel="noopener">
-              <span class="dataset-chip-label">Dataset</span>
-              <span class="dataset-chip-link">Marxulia/asl_sign_languages_alphabets_v03</span>
+            <a class="button is-normal is-rounded is-dark" href="https://huggingface.co/datasets/Marxulia/asl_sign_languages_alphabets_v03" target="_blank" rel="noopener">
+              <span class="icon">
+                <i class="fas fa-database"></i>
+              </span>
+              <span>Dataset</span>
             </a>
           </div>
           <div class="columns is-variable is-5">
