--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     <div class="container">
       <h2 class="title">Repo &amp; setup notes</h2>
       <div class="content">
-        <p>Repository: <code>transladoorss-model-dev-env</code> (<a href="https://github.com/juniper-halo/TranSlaDoorss.git" target="_blank">Code</a>). In DEBUG, Django serves <code>frontend/index.html</code> plus static <code>/js</code>, <code>/css</code>, <code>/assets</code>, and <code>/media</code> (uploads under <code>backend/feedback_images</code>).</p>
+        <p>Repository: <code>transladoorss-model-dev-env</code> (Code). In DEBUG, Django serves <code>frontend/index.html</code> plus static <code>/js</code>, <code>/css</code>, <code>/assets</code>, and <code>/media</code> (uploads under <code>backend/feedback_images</code>).</p>
         <ul>
           <li>Frontend: static Bootstrap + vanilla JS (webcam capture, fetch to API); Jest tests in <code>frontend/tests/scripts.test.js</code>.</li>
           <li>Backend: Django + DRF; pytest/pytest-django cover API behaviors. MEDIA_ROOT switches to a temp dir during tests.</li>
