--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://github.com/juniper-halo" target="_blank">Juno Tripathi</a><sup>1,†</sup>,
+                <a href="https://github.com/juniper-halo" target="_blank">Madhav Tripathi (id=juno)</a><sup>1,†</sup>,
               </span>
               <span class="author-block">Benjamin Vogt</sup>,</span>
               <span class="author-block">Kelly Shieh</sup>,</span>
