restyled the header

--- a/index.html
+++ b/index.html
@@ -176,40 +176,42 @@
             </div>
 
             <div class="column has-text-centered">
-            <div class="publication-links">
-              <span class="link-block">
-                <a href="#webapp-demo"
-                class="external-link button is-normal is-rounded is-dark">
-                <span class="icon">
-                  <i class="fas fa-video"></i>
+              <div class="publication-links">
+                <span class="link-block">
+                  <a href="#webapp-demo"
+                  class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fas fa-video"></i>
+                  </span>
+                  <span>Demo</span>
+                  </a>
                 </span>
-                <span>Demo</span>
-                </a>
-              </span>
 
-            <span class="link-block">
-              <a href="#results"
-              class="external-link button is-normal is-rounded is-dark">
-              <span class="icon">
-                <i class="fas fa-chart-bar"></i>
-              </span>
-              <span>Results</span>
-            </a>
-          </span>
+                <span class="link-block">
+                  <a href="#results"
+                  class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fas fa-chart-bar"></i>
+                  </span>
+                  <span>Results</span>
+                  </a>
+                </span>
 
-          <span class="link-block">
-            <a href="https://github.com/juniper-halo/TranSlaDoorss.git" target="_blank"
-            class="external-link button is-normal is-rounded is-dark">
-            <span class="icon">
-              <i class="fab fa-github"></i>
-            </span>
-            <span>Code</span>
-          </a>
-        </span>
-        <div class="is-size-6 has-text-centered">
-          <span class="author-block"><sup>†</sup> Project Lead and Primary Contributor</span>
-        </div>
-      </div>
+                <span class="link-block">
+                  <a href="https://github.com/juniper-halo/TranSlaDoorss.git" target="_blank"
+                  class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
+                  </a>
+                </span>
+              </div>
+
+              <div class="is-size-6 has-text-centered mt-4">
+                <span class="author-block"><sup>†</sup> Project Lead and Primary Contributor</span>
+              </div>
+            </div>
     </div>
   </div>
 </div>
