Add confusion legend and tune calibration contrast

--- a/index.html
+++ b/index.html
@@ -383,6 +383,12 @@
                       <canvas id="confusion-canvas" class="results-canvas results-canvas--square" aria-label="Confusion matrix"></canvas>
                       <div class="canvas-tooltip" id="confusion-tooltip"></div>
                     </div>
+                    <div class="confusion-legend">
+                      <span class="legend-item">
+                        <span class="legend-swatch legend-swatch--confusion"></span>
+                        Low → High frequency
+                      </span>
+                    </div>
 
                     <h4 class="is-size-6">Calibration curve</h4>
                     <div class="results-canvas-wrap">
@@ -436,6 +442,12 @@
                     <div class="results-canvas-wrap">
                       <canvas id="confusion-test-canvas" class="results-canvas results-canvas--square" aria-label="Confusion matrix (test)"></canvas>
                       <div class="canvas-tooltip" id="confusion-test-tooltip"></div>
+                    </div>
+                    <div class="confusion-legend">
+                      <span class="legend-item">
+                        <span class="legend-swatch legend-swatch--confusion"></span>
+                        Low → High frequency
+                      </span>
                     </div>
 
                     <h4 class="is-size-6">Calibration curve</h4>
