Add acknowledgements and adjust legend flow

--- a/index.html
+++ b/index.html
@@ -532,6 +532,9 @@
           <li>Testing: Backend tests run with pytest -c <code>backend/pytest.ini</code>. Frontend tests run with cd <code>frontend/js</code> &amp;&amp; npm test. Keep API response contracts consistent across both suites if responses change.</li>
         </ul>
         <p>Current gap: <code>Feedback</code> is stored for future retraining, but an automated retraining pipeline is not yet implemented.</p>
+        <p>
+          <strong>Acknowledgements.</strong> Portions of the implementation were assisted by OpenAI Codex for code generation and refactoring. All system design decisions, evaluation methodology, and result interpretation were performed by the authors.
+        </p>
       </div>
     </div>
   </div>
